FIX navbar collapse in responsive mode

--- a/src/index.css
+++ b/src/index.css
@@ -13,7 +13,20 @@
 }
 body{
    font-family: "Mulish", sans-serif !important;
-}
+    animation: fadeInAnimation ease 1s;
+    animation-iteration-count: 1;
+    animation-fill-mode: forwards;
+  }
+  
+  @keyframes fadeInAnimation {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
 #refundheader{
   margin-top: 7rem !important;
   
@@ -411,4 +424,19 @@ footer{
 .mainheader{
   text-shadow: 5px 5px 5px rgba(250, 250, 250, 0.526);
 }
+body{
+  font-family: "Mulish", sans-serif !important;
+   animation: fadeInAnimation ease 3s;
+   animation-iteration-count: 1;
+   animation-fill-mode: forwards;
+ }
+ 
+ @keyframes fadeInAnimation {
+   0% {
+     opacity: 0;
+   }
+   100% {
+     opacity: 1;
+   }
+ }
 }
